# human-value-detection-context-rag

./: .gitignore  Dockerfile.cpu  Dockerfile.gpu  INSTALL.md  Makefile  README.md  artifact_documentation.md  environment.yml  pyproject.toml  requirements.txt
configs/: deberta-v3-large_doc.yaml  deberta-v3-large_doc_crossattn_rag.yaml  deberta-v3-large_doc_late_rag.yaml  deberta-v3-large_doc_rag.yaml  deberta-v3-large_sentence.yaml  deberta-v3-large_sentence_rag.yaml  deberta-v3-large_window.yaml  deberta-v3-large_window_rag.yaml  deberta_doc.yaml  deberta_doc_crossattn_rag.yaml  deberta_doc_late_rag.yaml  deberta_doc_rag.yaml  deberta_sentence.yaml  deberta_sentence_rag.yaml  deberta_window.yaml  deberta_window_rag.yaml  gemma_doc.yaml  gemma_doc_rag.yaml  gemma_sentence.yaml  gemma_sentence_rag.yaml  gemma_window.yaml  gemma_window_rag.yaml  llama-3.3-70b-instruct_doc.yaml  llama-3.3-70b-instruct_doc_rag.yaml  llama-3.3-70b-instruct_sentence.yaml  llama-3.3-70b-instruct_sentence_rag.yaml  llama-3.3-70b-instruct_window.yaml  llama-3.3-70b-instruct_window_rag.yaml  mistral-large-instruct-2407_doc.yaml  mistral-large-instruct-2407_doc_rag.yaml  mistral-large-instruct-2407_sentence.yaml  mistral-large-instruct-2407_sentence_rag.yaml  mistral-large-instruct-2407_window.yaml  mistral-large-instruct-2407_window_rag.yaml  qwen2.5-72b-instruct_doc.yaml  qwen2.5-72b-instruct_doc_rag.yaml  qwen2.5-72b-instruct_sentence.yaml  qwen2.5-72b-instruct_sentence_rag.yaml  qwen2.5-72b-instruct_window.yaml  qwen2.5-72b-instruct_window_rag.yaml
notebooks/: colab_launcher.ipynb
(+262 files in other folders)
