[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "value-context-rag"
version = "0.1.0"
description = "Schwartz value detection with context and RAG."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
